<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tortugas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.042"
            android:id="@+id/txtCabecera"/>
    <ImageView
            android:layout_width="203dp"
            android:layout_height="255dp" app:srcCompat="@drawable/tmntraph"
            android:id="@+id/tortuga"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" app:layout_constraintHorizontal_bias="0.373"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCabecera" android:contentDescription="@string/todo"/>
    <RadioGroup
            android:layout_width="311dp"
            android:layout_height="242dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="379dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="110dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="59dp" android:layout_marginStart="59dp" android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp" app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
                android:text="@string/leo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="radiobuttonClick"
                android:id="@+id/rb_leo" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/don"
                android:layout_width="wrap_content"
                android:onClick="radiobuttonClick"
                android:layout_height="wrap_content" android:id="@+id/rb_don" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/mike"
                android:layout_width="wrap_content"
                android:onClick="radiobuttonClick"
                android:layout_height="wrap_content" android:id="@+id/rb_mike" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/raph"
                android:layout_width="wrap_content"
                android:onClick="radiobuttonClick"
                android:layout_height="wrap_content" android:id="@+id/rb_raph" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/desarrollado_por_alberto_ariel_andia"
            android:layout_width="241dp"
            android:layout_height="39dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="657dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="55dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="175dp" android:layout_marginStart="175dp" android:layout_marginEnd="177dp"
            android:layout_marginRight="177dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>